# anime-style-transfer

./: .gitignore  .gitmodules  Makefile  compile_images_for_readme.py  notes.md  readme.md  sgd_simple_example.py
code/adtf-streaminglib/examples/: CMakeLists.txt
code/adtf-streaminglib/examples/additionaldata/: CMakeLists.txt  additionaldata.cpp  readme.txt
code/adtf-streaminglib/examples/candump/: candump.cpp  canstruct.h
code/adtf-streaminglib/examples/canwriter/: readme.txt
code/adtf-streaminglib/examples/copychunks/: CMakeLists.txt  copychunks.cpp  readme.txt
code/adtf-streaminglib/examples/decode_compressed_video/: CMakeLists.txt  codec_intf.h  decode_compressed_video.cpp  readme.txt
code/adtf-streaminglib/examples/decode_compressed_video/codec_adtf/: codec_adtf.cpp  codec_adtf.h  codec_rice.h  rice.cpp
code/adtf-streaminglib/examples/dummywriter/: CMakeLists.txt  dummywriter.cpp  readme.txt
code/adtf-streaminglib/examples/eds/: CMakeLists.txt  eds.cpp
code/adtf-streaminglib/examples/encode_compressed_video/: codec_intf.h  readme.txt  stdafx.cpp  stdafx.h
code/adtf-streaminglib/examples/encode_compressed_video/codec_adtf/: codec_adtf.cpp  rice.cpp
code/adtf-streaminglib/examples/encode_compressed_video/codec_ffmpeg/: codec_ffmpeg.h
code/adtf-streaminglib/examples/encode_compressed_video/codec_vfw/: codec_vfw.cpp
code/adtf-streaminglib/examples/mediadescription/: CMakeLists.txt  mediadescription.cpp  mediadescription.h  stream2_media_desc.xml
code/adtf-streaminglib/examples/referencedfiles/: readme.txt  referencedfiles.cpp
code/dat-unpacker/: .atom-dbg.cson  .gitignore  CMakeLists.txt  Makefile
code/dat-unpacker/include/: dat_handler.h  imu.h  imu.h.gch  parse_input.h  velo.h
code/dat-unpacker/src/: dat_handler.cpp  imu.cpp  main.cpp  parse_input.cpp
code/ibeo/src/: CMakeLists.txt  Doxyfile  Ibeo_license.txt  Makefile
code/ibeo/src/demo/: .gitignore  IbeoSdkDataLoggerDemo.cpp  IbeoSdkDbRoadMarkingDemo.cpp  IbeoSdkEcuLiveDemo.cpp  IbeoSdkEcuSimDemo.cpp  IbeoSdkFileDemo.cpp  IbeoSdkLuxHrLiveDemo.cpp  IbeoSdkPointCloudPlane7510Demo.cpp  IbeoSdkTrackingBoxLiveDemo.cpp  IbeoSdkWriterDemo.cpp  ScalaUdpLiveDemo.cpp  ScalaUdpSimDemo.cpp
code/ibeo/src/demo/IbeoSdkCarriageWayList6970DemoProject/: IbeoSdkCarriageWayList6970Demo.vcxproj.filters  IbeoSdkCarriageWayList6970Demo_VS2008.vcproj
code/ibeo/src/demo/IbeoSdkEcuLiveDemoProject/: IbeoSdkEcuLiveDemo.vcxproj  IbeoSdkEcuLiveDemo_VS2010.vcxproj  IbeoSdkEcuLiveDemo_VS2010.vcxproj.filters
code/ibeo/src/demo/IbeoSdkEcuSimDemoProject/: IbeoSdkEcuSimDemo.vcxproj  IbeoSdkEcuSimDemo_VS2010.vcxproj
code/ibeo/src/demo/IbeoSdkFileDemoProject/: IbeoSdkFileDemo.vcxproj  IbeoSdkFileDemo_VS2012.vcxproj
code/ibeo/src/demo/IbeoSdkLaneEvaluationDemoProject/: IbeoSdkLaneEvaluationDemo.vcxproj  IbeoSdkLaneEvaluationDemo_VS2008.vcproj  IbeoSdkLaneEvaluationDemo_VS2010.vcxproj  IbeoSdkLaneEvaluationDemo_VS2012.vcxproj
code/ibeo/src/demo/IbeoSdkLuxHrLiveDemoProject/: IbeoSdkLuxHrLiveDemo.vcxproj  IbeoSdkLuxHrLiveDemo_VS2008.vcproj  IbeoSdkLuxHrLiveDemo_VS2012.vcxproj
code/ibeo/src/demo/IbeoSdkLuxLiveDemoProject/: IbeoSdkLuxLiveDemo.vcxproj  IbeoSdkLuxLiveDemo_VS2010.vcxproj  IbeoSdkLuxLiveDemo_VS2012.vcxproj
code/ibeo/src/demo/IbeoSdkMetaInformationDemoProject/: IbeoSdkMetaInformationDemo.vcxproj  IbeoSdkMetaInformationDemo_VS2008.vcproj  IbeoSdkMetaInformationDemo_VS2010.vcxproj
code/ibeo/src/demo/IbeoSdkPointCloudPlane7510DemoProject/: IbeoSdkPointCloudPlane7510Demo.vcxproj
code/ibeo/src/demo/IbeoSdkScalaSimDemoProject/: IbeoSdkScalaSimDemo_VS2008.vcproj
code/ibeo/src/demo/IbeoSdkTrackingBoxLiveDemoProject/: IbeoSdkTrackingBoxLiveDemo.vcxproj.filters  IbeoSdkTrackingBoxLiveDemo_VS2008.vcproj
code/ibeo/src/demo/IbeoSdkWriterDemoProject/: IbeoSdkWriterDemo.vcxproj  IbeoSdkWriterDemo_VS2008.vcproj  IbeoSdkWriterDemo_VS2012.vcxproj  IbeoSdkWriterDemo_VS2012.vcxproj.filters
code/ibeo/src/demo/ScalaUdpLiveDemoProject/: ScalaUdpLiveDemo_VS2010.vcxproj
code/ibeo/src/demo/ScalaUdpSimDemoProject/: ScalaUdpSimDemo.vcxproj  ScalaUdpSimDemo_VS2012.vcxproj.filters
code/ibeo/src/doxygenInput/: ibeoDoxygenLayout.xml
code/ibeo/src/doxygenInput/addons/: addons.dox
code/ibeo/src/doxygenInput/tutorials/: CarriageWayList6970DemoFile.dox  GettingStarted.dox  TutorialCarriageWayList6970.dox
code/ibeo/src/ibeosdk/: BoostX64SettingsPropertySheet.props  BoostX64SettingsPropertySheet_VS2010.props  BoostX64SettingsPropertySheet_VS2012.props  BoostX86SettingsPropertySheet_VS2010.props  CodeStyle.txt  CompressedPoint2d.cpp  CompressedPoint2d.hpp  Convert.hpp  DataBlockBufferProvider.hpp  EcefPoint.cpp  EcefPoint.hpp  EventMonitor.cpp  EventMonitor.hpp  IbeoSDK.hpp  IpHelper.hpp  LaneHandler.cpp  LaneHandler.hpp  Line2dFloat.cpp  Line2dFloat.hpp  Log.cpp  Log.hpp  LogFileManager.cpp  Makefile  Math.cpp  Matrix2dFloat.hpp  Matrix3dFloat.cpp  Matrix3dFloat.hpp  MetaInformationFactory.cpp  MsgBuffer.cpp  MsgBufferBase.hpp  ObjectBasic.cpp  Point2d.hpp  RotationMatrix2dFloat.hpp  RotationMatrix3dFloat.cpp  RotationMatrix3dFloat.hpp  ScannerProperties.cpp  ScannerProperties.hpp  SdkAbort.hpp  SplitFile.hpp  Time.cpp  (+13 more)
code/ibeo/src/ibeosdk/database/: CollectionName.hpp  DbConnectionFactory.cpp  DbConnectionFactory.hpp  DbQueryIterator.hpp  DbQueryOptions.hpp  MongoDbConnection.cpp  MongoDbConnection.hpp  MongoDbInterface.hpp  MongoDbInterfaceT.hpp  MongoDbUtils.cpp  initMongoClient.hpp
code/ibeo/src/ibeosdk/datablocks/: CanMessage.hpp  ContentSeparator7100.hpp  DeviceStatus.hpp  EventTag.cpp  FrameEndSeparator.cpp  FrameEndSeparator.hpp  FrameIndex.cpp  FrameIndex.hpp  GpsImu9001.cpp  GpsImu9001.hpp  IdcTrailer.cpp  IdcTrailer.hpp  LogMessageBase.hpp  LogMessageError.cpp  Makefile  (+35 more)
code/ibeo/src/tools/: IdcCompare.cpp  IdcMergerTool.cpp  IdcRepairTool.cpp  Makefile  idcFixSizeOfPrevMsg.c
code/ibeo/src/unittests/: CMakeLists.txt  GpsImu9001Test.cpp  Makefile  MeasurementListTest.cpp  ObjectAssociationList4001Test.cpp  ObjectListScala2271Test.cpp  ObjectScala2271Test.cpp  SystemMonitoringTest.cpp  TimeRecord9000Test.cpp
(+513 files in other folders)
